--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/standalone": "^7.23.9",
     "@toss/react": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/babel__standalone": "^7.1.7",
     "@types/node": "^20.11.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
