--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.23.9",
+    "@monaco-editor/react": "^4.6.0",
     "@toss/react": "^1.6.1",
+    "monaco-editor": "^0.46.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.5.0"
